--- a/Sunny_Lake/source/styles.css
+++ b/Sunny_Lake/source/styles.css
@@ -114,7 +114,7 @@ body {
 }
 
 .header {
-  height: 200px;
+  height: 150px;
 }
 .header__container {
   display: -webkit-box;
@@ -139,8 +139,8 @@ body {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  width: 40px;
-  height: 40px;
+  width: 35px;
+  height: 35px;
   -webkit-box-orient: vertical;
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
@@ -200,6 +200,8 @@ body {
   color: #fff;
   padding: 0 0 3px 0;
   text-align: center;
+  -webkit-transition: all 0.5s ease;
+  transition: all 0.5s ease;
 }
 .header__list ul li a:before {
   content: "";
@@ -260,8 +262,8 @@ body {
 }
 .header__rent__phone-icon {
   display: none;
-  width: 60px;
-  height: 60px;
+  width: 50px;
+  height: 50px;
   margin: 0 auto;
 }
 .header__rent__phone-icon img {
@@ -311,8 +313,8 @@ body {
   transition: all 0.5s ease;
   border-radius: 10px;
   max-width: 100%;
-  max-height: 30%;
-  height: 30%;
+  max-height: 40%;
+  height: 40%;
   padding: 0 10px;
 }
 .header__rent__btn a {
@@ -361,7 +363,21 @@ body {
   -webkit-box-flex: 1;
       -ms-flex: 1 1 15%;
           flex: 1 1 15%;
-  max-height: 80%;
+  height: 80%;
+}
+.header__logo a {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  width: 100%;
+  height: 100%;
 }
 .header__logo img {
   max-width: 100%;
@@ -381,16 +397,69 @@ body {
             flex: 1 1 40%;
   }
 }
+@media (max-width: 782px) {
+  .header {
+    height: 100px;
+  }
+}
 
 .main {
   -webkit-box-flex: 1;
       -ms-flex: 1 1 auto;
           flex: 1 1 auto;
 }
-.main .title_container {
-  position: relative;
+
+.title-img {
+  width: 100%;
+  height: calc(100vh - 150px);
+  background: fixed #fff url(../images/backgrounds/sunnylake_bg.jpeg) center center/cover no-repeat;
 }
-.main .title_container_img {
-  position: absolute;
-  background: url(../images/backgrounds/sunnylake_bg.jpeg);
+.title-img__container {
+  position: relative;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  width: 100%;
+  height: 100%;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+.title-img__img {
+  width: 35%;
+  height: auto;
+  text-align: center;
+}
+.title-img__img img {
+  max-width: 100%;
+  max-height: 100%;
+}
+@media (max-width: 782px) {
+  .title-img__img {
+    width: 70%;
+  }
+}
+.title-img__title {
+  font-size: 35px;
+  line-height: 40px;
+  font-weight: bold;
+  text-align: center;
+  margin: 5% 0 0 0;
+}
+@media (max-width: 1230px) {
+  .title-img__title {
+    font-size: calc(25px + (35 - 25) * ((100vw - 320px) / (1200 - 320)));
+  }
+}
+@media (max-width: 782px) {
+  .title-img {
+    height: calc(100vh - 100px);
+  }
 }
