--- a/Sunny_Lake/source/styles.scss
+++ b/Sunny_Lake/source/styles.scss
@@ -66,7 +66,7 @@ body {
 }
 
 .header {
-	height: 200px;
+	height: 150px;
 	&__container {
 		display: flex;
 		height: 100%;
@@ -79,8 +79,8 @@ body {
 		align-items: center;
 		button {
 			display: flex;
-			width: 40px;
-			height: 40px;
+			width: 35px;
+			height: 35px;
 			flex-direction: column;
 			justify-content: space-around;
 			align-items: center;
@@ -116,6 +116,7 @@ body {
 					color: #fff;
 					padding: 0 0 3px 0;
 					text-align: center;
+					transition: all 0.5s ease;
 				}
 				a:before {
 					content: "";
@@ -160,8 +161,8 @@ body {
 		height: 100%;
 		&__phone-icon {
 			display: none;
-			width: 60px;
-			height: 60px;
+			width: 50px;
+			height: 50px;
 			margin: 0 auto;
 			img {
 				max-width: 100%;
@@ -194,8 +195,8 @@ body {
 			transition: all 0.5s ease;
 			border-radius: 10px;
 			max-width: 100%;
-			max-height: 30%;
-			height: 30%;
+			max-height:40%;
+			height: 40%;
 			padding: 0 10px;
 			a {
 				color: $dark-blue;
@@ -226,7 +227,15 @@ body {
 		display: flex;
 		align-items: center;
 		flex: 1 1 15%;
-		max-height: 80%;
+		height: 80%;
+		a {
+			display: flex;
+			display: flex;
+			justify-content: center;
+			align-items: center;
+			width: 100%;
+			height: 100%;
+		}
 		img {
 			max-width: 100%;
 			max-height: 100%;
@@ -238,22 +247,52 @@ body {
 			flex: 1 1 40%;
 		}
 	}
+	@media (max-width: 782px){
+		height: 100px;
+	}
 }
+
 .main {
 	flex: 1 1 auto;
-	.title_img {
-		height: 400px;
+}
+.title-img {
+	width: 100%;
+	height: calc(100vh - 150px);
+	background: fixed #fff url(../images/backgrounds/sunnylake_bg.jpeg) center center/cover no-repeat;
+	&__container {
+		position: relative;
+		display: flex;
+		width: 100%;
+		height: 100%;
+		flex-direction: column;
+		justify-content: center;
+		align-items: center;
 	}
-	.title{ 
-		&_img_container{
-			position: relative;
-			&_img_img {
-				position: absolute;
-				width: ;
-				background: url(../images/backgrounds/sunnylake_bg.jpeg);
-			}
-			&_img_title {}
+	&__img {
+		width: 35%;
+		height: auto;
+		text-align: center;
+		img {
+			max-width: 100%;
+			max-height: 100%;
+		}
+		@media (max-width: 782px) {
+			width: 70%;
 		}
 	}
+	&__title {
+		font-size: 35px;
+		line-height: 40px;
+		font-weight: bold;
+		text-align: center;
+		margin: 5% 0 0 0;
+		@media (max-width: $mw) {
+			font-size: calc(25px + (35 - 25) * ((100vw - 320px) / (1200 - 320)));
+		}
+	}
+	@media (max-width: 782px){
+		height: calc(100vh - 100px);
+	}
 }
+
 
